syntax = "proto3";

package Netxd_Customers;


option go_package="github.com/VasenthD/Sample-crud";


service CustomerService {

rpc CreateCustomer (CustomerInfo) returns (DBResponse);

}


message DOB {
  int64 year = 1;
  int64 month = 2;
  int64 date = 3; 
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string postal_code = 4;
  string country = 5;
}

message CustomerInfo {
  string first_name = 1;
  string last_name = 2;
  string customer_id = 3;
  int64 ssn_number = 4;
  int64 phone_number = 5;
  string email = 6;
  DOB dob = 7;
  Address address = 8;
  string job_title = 9;
  float annual_income = 10;
  float initial_deposit = 11;
}

message DBResponse {
  int64 ssn_number = 1;
  int64 phone_number = 2;
  string email = 3;
}

